--- a/roles/my-use-case/tasks/main.yml
+++ b/roles/my-use-case/tasks/main.yml
@@ -3,10 +3,10 @@
     name: microk8s
 
 - include_role:
-    name: dt-activegate
+    name: dt-activegate-classic
 
 - include_role:
-    name: dt-oneagent
+    name: dt-oneagent-classic
 
 - include_role:
     name: monaco
