--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/microblog-service.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/microblog-service.yaml
@@ -29,6 +29,8 @@ spec:
     matchLabels:
       app.kubernetes.io/name: microblog-service
       app.kubernetes.io/part-of: "{{ .Chart.Name }}"
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
