--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/user-auth-service.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/user-auth-service.yaml
@@ -30,6 +30,8 @@ spec:
     matchLabels:
       app.kubernetes.io/name: user-auth-service
       app.kubernetes.io/part-of: "{{ .Chart.Name }}"
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
