--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/ad-service.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/ad-service.yaml
@@ -46,13 +46,17 @@ spec:
             - containerPort: 8082
           env:
             - name: JAEGER_SERVICE_NAME
-              value: "unguard-ad-service"
+              value: "unguard-frontend"
             - name: JAEGER_AGENT_HOST
               value: "jaeger-agent" # change depending on your jaeger deployment
             - name: JAEGER_SAMPLER_TYPE
               value: "const"
             - name: JAEGER_SAMPLER_PARAM
               value: "1"
+            - name: MICROBLOG_SERVICE_ADDRESS
+              value: "unguard-microblog-service"
+            - name: PROXY_SERVICE_ADDRESS
+              value: "unguard-proxy-service"
             - name: ASPNETCORE_ENVIRONMENT
               value: "Production"
             - name: SERVER_PORT
