--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/proxy-service.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/proxy-service.yaml
@@ -14,6 +14,45 @@ spec:
     - targetPort: 8081
       port: 80
 ---
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  name: unguard-proxy
+  labels:
+    app.kubernetes.io/name: proxy-service
+    app.kubernetes.io/part-of: {{ .Chart.Name }}
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: Role
+metadata:
+  name: proxy-role
+  labels:
+    app.kubernetes.io/name: proxy-service
+    app.kubernetes.io/part-of: {{ .Chart.Name }}
+rules:
+  - apiGroups: [""] # "" indicates the core API group
+    resources: ["pods"]
+    verbs: ["create", "list", "get"]
+  - apiGroups: [""]
+    resources: ["pods/exec"]
+    verbs: ["create"]
+---
+kind: RoleBinding
+apiVersion: rbac.authorization.k8s.io/v1
+metadata:
+  name: proxy-rolebinding
+  labels:
+    app.kubernetes.io/name: proxy-service
+    app.kubernetes.io/part-of: {{ .Chart.Name }}
+subjects:
+  - kind: ServiceAccount
+    name: {{ .Chart.Name }}-proxy
+    apiGroup: ""
+roleRef:
+  kind: Role
+  name: proxy-role
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
