--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/redis.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/redis.yaml
@@ -15,6 +15,15 @@ spec:
       port: 6379
       targetPort: 6379
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: unguard-redis-config
+data:
+  redis-config: |
+    maxmemory 256mb
+    maxmemory-policy allkeys-lru
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
