--- a/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/user-simulator.yaml
+++ b/roles/my-use-case/files/repos/hot-appsec/helm/unguard/templates/user-simulator.yaml
@@ -14,6 +14,8 @@ spec:
       app.kubernetes.io/name: user-simulator
       app.kubernetes.io/part-of: "{{ .Chart.Name }}"
   replicas: 3
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
